samples/_failures_safe/1761557278_f19eed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78cc8c77.c: In function ‘main’:
./samples/SAFE/__tmp_78cc8c77.c:178:16: error: missing terminating " character
  178 |         printf("  %s: '%s'\n
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_78cc8c77.c:178:9: error: expected expression at end of input
  178 |         printf("  %s: '%s'\n
      |         ^~~~~~
./samples/SAFE/__tmp_78cc8c77.c:178:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78cc8c77.c:178:9: error: expected declaration or statement at end of input
